--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="card">
-    <section class='avatar' style='background: url(https://source.unsplash.com/collection/1652732/500x500) center center / cover'>
+    <section class='avatar' style='background: url({{instructor.avatar_url}}) center center / cover'>
     </section>
     <section class='details'>
         <form method="POST" action="/instructors?_method=PUT">
@@ -23,5 +23,15 @@
         </form>
     </section>
 </div>
+
+<script>
+    const formDelete = document.querySelector("#form-delete")
+    formDelete.addEventListener("submit", function(event) {
+        const confirmation = confirm("Deseja Deletar?")
+        if(!confirmation) {
+            event.preventDefault()
+        }
+    })
+</script>
 
 {% endblock content %}
