--- a/views/members/fields.njk
+++ b/views/members/fields.njk
@@ -1,30 +1,68 @@
 <div class='item'>
             <div>Avatar URL</div>
-            <div><input type="url" name="avatar_url" placeholder='http://' value='{{ instructor.avatar_url }}'></div>
+            <div><input type="url" name="avatar_url" placeholder='http://' value='{{ member.avatar_url }}'></div>
         </div>
         <div class='item'>
-            <div>Instrutor</div>
-            <div><input type="text" name="name" placeholder='Nome do Instrutor' value='{{ instructor.name }}'></div>
+            <div>Nome</div>
+            <div><input type="text" name="name" placeholder='Nome do Membro' value='{{ member.name }}'></div>
         </div>
+
+        <div class='item'>
+            <div>Email</div>
+            <div><input type="email" name="email" placeholder='Ex: gym@gmail.com' value='{{ member.email }}'></div>
+        </div>
+
         <div class='item'>
             <div>Data de nascimento</div>
-            <div><input type="date" name="birth" value='{{ instructor.birth }}'></div>
+            <div><input type="date" name="birth" value='{{ member.birth}}'></div>
         </div>
         <div class='item'>
             <div>Sexo</div>
             <div>
-                <span><input type="radio" name="gender" value="M" {% if instructor.gender == 'M' %}
+                <span><input type="radio" name="gender" value="M" {% if member.gender == 'M' %}
                 checked     {% endif %}>Masculino</span>
-                <span><input type="radio" name="gender" value="F" {% if instructor.gender =='F' %}
+                <span><input type="radio" name="gender" value="F" {% if member.gender =='F' %}
                 checked     {% endif %}>Feminino</span>
             </div>
         </div>
-        
         <div class='item'>
-            <div>Área de atuação</div>
+            <div>Tipo Sanguíneo</div>
             <div>
-                <input type="text" name='services' placeholder='Separe os serviços prestados por vírgula' value='{{ instructor.services }}'>
+                <select name="blood">
+                    <option value="A+" {% if member.blood == "A+" %}selected{% endif %}>
+                        A+
+                    </option>
+                    <option value="A-" {% if member.blood == "A-" %}selected{% endif %}>
+                        A-
+                    </option>
+                    <option value="B+" {% if member.blood == "B+" %}selected{% endif %}>
+                        B+
+                    </option>
+                    <option value="B-" {% if member.blood == "B-" %}selected{% endif %}>
+                        B-
+                    </option>
+                    <option value="AB+" {% if member.blood == "AB+" %}selected{% endif %}>
+                        AB+
+                    </option>
+                    <option value="AB-" {% if member.blood == "AB-" %}selected{% endif %}>
+                        AB-
+                    </option>
+                    <option value="0+" {% if member.blood == "O+" %}selected{% endif %}>
+                        O+
+                    </option>
+                    <option value="0-" {% if member.blood == "O-" %}selected{% endif %}>
+                        O-
+                    </option>
+                </select>
             </div>
+        </div>
+        <div class='item'>
+            <div>Peso (kg)</div>
+            <div><input type="number" name="weight" value='{{ member.weight }}'></div>
+        </div>
+        <div class='item'>
+            <div>Altura (cm)</div>
+            <div><input type="number" name="height" value='{{ member.height }}'></div>
         </div>
 
         <button type='submit'>Salvar</button>
