--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Kevyn Gonçalves</title>
+    <title>Gym</title>
 
     {% block head %}
         <title>Gym Manager</title>
