--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -20,7 +20,7 @@
                     {{ instructor.name }}
                 </td>
                 <td>{{ instructor.services }}</td>
-                <td><a href="/instructors/{{instructor.id}}">ver</a></td>
+                <td><a href="/instructors/{{instructor.id}}/view">ver</a></td>
             </tr>
             {% endfor %}
         </tbody>
