--- a/src/app/views/members/index.njk
+++ b/src/app/views/members/index.njk
@@ -24,7 +24,7 @@
                 <td>{{ member.email }}</td>
                 <td>{{ member.weight }}</td>
                 <td>{{ member.height }}</td>
-                <td><a href="/members/{{member.id}}">ver</a></td>
+                <td><a href="/members/{{member.id}}/view">ver</a></td>
             </tr>
             {% endfor %}
         </tbody>
